# ground_segmentation

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_8md.html  Doxyfile.in  README.md  classes.html  classground__segmentation_1_1PointCloudGrid-members.html  classground__segmentation_1_1PointCloudGrid.html  classground__segmentation_1_1PointCloudGrid.js  classground__segmentation_1_1PointCloudGrid__coll__graph.map  classground__segmentation_1_1ProcessCloudProcessor.html  dir_d44c64559bbebec7f509842c48db8b23.js  functions.html  functions_func.html  functions_type.html  functions_vars.html  graph_legend.html  ground__detection_8hpp.js  ground__detection_8hpp_source.html  ground__detection__types_8hpp.html  ground__detection__types_8hpp__dep__incl.map  ground__detection__types_8hpp__incl.map  ground__detection__types_8hpp_source.html  ground_segmentation-config.cmake  index.html  index.js  manifest.xml  namespaceground__segmentation.js  namespaces.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  package.xml  pointcloud__processor_8hpp.html  pointcloud__processor_8hpp__incl.md5  pointcloud__processor_8hpp_source.html  pointcloud_obstacle_detection-config.cmake  structground__segmentation_1_1GridCell-members.html  structground__segmentation_1_1GridCell.html  (+15 more)
.github/workflows/: c-cpp.yml  docs.yml
html/: README_8md.html  annotated.html  annotated_dup.js  classground__segmentation_1_1PointCloudGrid-members.html  classground__segmentation_1_1PointCloudGrid.html  classground__segmentation_1_1PointCloudGrid.js  classground__segmentation_1_1PointCloudGrid__coll__graph.md5  classground__segmentation_1_1ProcessCloudProcessor-members.html  classground__segmentation_1_1ProcessCloudProcessor.js  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions_func.html  functions_vars.html  ground__detection_8hpp.html  ground__detection_8hpp__incl.map  ground__detection_8hpp__incl.md5  ground__detection__types_8hpp.js  ground__detection__types_8hpp__dep__incl.md5  ground__detection__types_8hpp__incl.md5  index.html  md__2home_2runner_2work_2ground__segmentation_2ground__segmentation_2CONTRIBUTING.html  menudata.js  namespaceground__segmentation.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespaces_dup.js  navtreeindex0.js  pages.html  pointcloud__processor_8hpp.js  pointcloud__processor_8hpp__incl.map  structground__segmentation_1_1GridCell.html  structground__segmentation_1_1GridCell.js  structground__segmentation_1_1GridConfig.html  structground__segmentation_1_1GridConfig.js  structground__segmentation_1_1Index3D-members.html  structground__segmentation_1_1Index3D.js  structground__segmentation_1_1PCLPointCloudAdaptor-members.html  structground__segmentation_1_1PCLPointCloudAdaptor.html  structground__segmentation_1_1PCLPointCloudAdaptor.js  (+1 more)
html/search/: all_0.js  all_11.js  all_13.js  all_14.js  all_18.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  classes_1.js  classes_3.js  enumvalues_0.js  enumvalues_3.js  enumvalues_4.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  functions_7.js  functions_9.js  pages_0.js  pages_2.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_1.js  variables_2.js  variables_7.js  variables_8.js  variables_a.js  variables_b.js
include/: Box.hpp  FEC.hpp  common.hpp  ground_detection.hpp  ground_detection_statistics.hpp  ground_detection_types.hpp  pointcloud_processor.hpp  process_pointcloud.hpp  utils.hpp
latex/: CONTRIBUTING_8md.tex  README_8md.tex  annotated.tex  classground__segmentation_1_1PointCloudGrid.tex  classground__segmentation_1_1PointCloudGrid__coll__graph.md5  classground__segmentation_1_1ProcessCloudProcessor.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  ground__detection_8hpp.tex  ground__detection_8hpp__incl.md5  ground__detection_8hpp_source.tex  ground__detection__types_8hpp.tex  ground__detection__types_8hpp__dep__incl.md5  ground__detection__types_8hpp__incl.md5  ground__detection__types_8hpp_source.tex  index.tex  md__2home_2runner_2work_2ground__segmentation_2ground__segmentation_2CONTRIBUTING.tex  namespaceground__segmentation.tex  namespaces.tex  pointcloud__processor_8hpp.tex  pointcloud__processor_8hpp__incl.md5  pointcloud__processor_8hpp_source.tex  refman.tex  structground__segmentation_1_1GridCell.tex  structground__segmentation_1_1GridConfig.tex  structground__segmentation_1_1Index3D.tex  structground__segmentation_1_1Index3D_1_1HashFunction.tex  structground__segmentation_1_1Index3D_a2d84cc6ed1d9c019bd1fbd9a9fdbbe80_icgraph.md5  structground__segmentation_1_1Index3D_ab6218357ea4c637211c27b66ddc47574_cgraph.md5  structground__segmentation_1_1PCLPointCloudAdaptor.tex  structground__segmentation_1_1Point.tex
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  enums_0.js  enums_1.js  enumvalues_1.js  enumvalues_2.js  enumvalues_5.js  files_1.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  (+12 more)
src/: Box.h  CMakeLists.txt  ComputeConvexHulls.cpp  ComputeConvexHulls.hpp  Dummy.cpp  Dummy.hpp  GroundDetection.cpp  GroundDetection.h  Main.cpp  OrientedBoundingBox.h  Point.h  ground_detection.cpp  ground_detection.hpp  main.cpp  pointcloud_obstacle_detection.pc.in  pointcloud_processor.cpp  processPointClouds.cpp  processPointClouds.h  processPointClouds.hpp  process_pointcloud.cpp
src/cmake/: ground_segmentationConfig.cmake.in
src/test/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp  test_Dummy.cpp  test_pointcloud_grid.cpp  test_visual_segmentation.cpp
